--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
     "@angular/http": "^7.2.16",
+    "@angular/material": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
